No shadow, please

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -6,4 +6,6 @@
 img {
     border: 0!important;
     box-shadow: 0!important;
+    -moz-box-shadow: 0!important;;
+    -webkit-box-shadow: 0!important;
 }
